2010-06-25 j.m.reneau <renejm@users.sourceforge.net> 0.9.6q
	* found read statement removed from LEX - readded
	* fixed string pointer conversion in readline
	* changed sprite move to limit range to 0-graphwidth|graphheight-1
	* changed all file io statements to allow for 0-7 files simultaneously - syntax didn't change for single file operations but new
		filenumber parameter added to allow for multiple files

2010-06-14 j.m.reneau <renejm@users.sourceforge.net> 0.9.6p
	* re-wrote the way color "Clear" works
	- getcolor and pixel will return a -1 when the drawing color or pixel requested is clear (or after a clg and nothing has been drawn there)
	- the CLEAR constant/function now has a value of -1
	- all of the drawing commands (point,line,rect,cir,poly,stamp) now will replace pixels with a transparent when color is clear
	# added clear of the graphics output area - when initialized to cleanup LINUX display

2010-06-13 j.m.reneau <renejm@users.sourceforge.net> 0.9.6o
	* added spritev - visible function
	* added spriteslice - extract a sprite from the screen and demo program
	* changed sprite to be not visible when created - so that is can be moved and so that it does not change the screen when sliced out.

2010-06-09 j.m.reneau <renejm@users.sourceforge.net> 0.9.6n
	* fixed several memory leaks with strings from stack and variable assignments
	* added sprites - spritedim, spriteload, spritemove, spriteplace, spritex, spritey, spritew, spriteh, and spritecollide

2010-06-07 j.m.reneau <renejm@users.sourceforge.net> 0.9.6m
	* fixed linux compile with lib espeak
	* added logic to parser to allow for whitespace before a label - to allow older examples to run

2010-06-01 j.m.reneau <renejm@users.sourceforge.net> 0.9.6l
	* fixed help display path when windows installed.
	* added getslice, putslice, and imgload into syntax highlighter
	* changed imgload from 0.9.6k to place the center of the image at the specified coordinates